--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-31 03:58:16
+lastsearch = 2024-07-31 05:28:23
 
 [shopee.vn]
-match = -8.3%%
-title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
+match = -104.2%%
+title = Thảm nỉ lau chân hình chữ nhật, chùi chân len mềm mịn dày dặn ...
+url = https://shopee.vn/Thảm-nỉ-lau-chân-hình-chữ-nhật-chùi-chân-len-mềm-mịn-dày-dặn-chống-trơn-trượt-hàng-chất-lượng-cao-i.1124996528.22086948160
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
+title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
 
 [tiki.vn]
-match = -54.2%%
-title = Thảm lau chân, siêu thấm cao cấp room mat 40x60 ( Đồ ...
-url = https://tiki.vn/tham-lau-chan-sieu-tham-cao-cap-room-mat-40x60-do-gia-dung-nhu-y-p181147569.html
+match = -70.8%%
+title = Thảm Lau Chân Nỉ - Chống Trượt, Siêu Thấm Hút Đế Cao ...
+url = https://tiki.vn/tham-lau-chan-ni-chong-truot-sieu-tham-hut-de-cao-su-cao-cap-long-min-day-dan-40x60cm-hang-loai-1-p205153225.html?spid=205153429
 
 [www.thamminhquang.vn]
 match = 33.3%%
@@ -83,8 +83,8 @@ url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.h
 
 [sieuthinguyenkim.com]
 match = -62.5%%
-title = Thảm lông mềm trải chân giường, lót ghế ngồi nhiều size 40x60
-url = https://sieuthinguyenkim.com/tham-long-mem-trai-chan-giuong-nti177943446.html
+title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
+url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
 
 [huyenikea.com]
 match = -4.2%%
