--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-30 20:25:16
+lastsearch = 2024-07-31 05:35:02
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV51
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv51/
+title = Bộ ga chun LIVING - LV55
+url = https://hanvico.com.vn/san-pham/lv55/
 
 [www.diepxuan.com]
 match = -4.8%%
 title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
-url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
+url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html?srsltid=AfmBOorzWKXkQblZfMz_CIa46iUCxfWp9XXTLZgI0S570OLS0dyJY7ZN
 
 [lasantevn.com]
 match = -57.1%%
@@ -44,7 +44,7 @@ url = https://songhong.info/chan-ga-goi-bc14
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 14
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html?srsltid=AfmBOoqJmy1IH1UqSROj6rEnCGZ6TJq87dKMr7xlCxtTliKfP0_t6kYE
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -54,7 +54,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 [foreverbedding.net]
 match = -66.7%%
 title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140?srsltid=AfmBOorPXUo2hlnn5p0vYGRko-k4LrlzHSuaAWzbN1laxuLdSlHNFlVL
 
 [changmibedding.com]
 match = -33.3%%
@@ -79,7 +79,7 @@ url = https://shopee.vn/Bộ-ga-gối-cotton-đũi-phủ-bèo-bọc-chun-trần-
 [shop.chanrathanhthuy.com]
 match = 57.1%%
 title = Bộ Ga Bọc Lụa Tơ Tằm 14
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-lua-to-tam-14
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-lua-to-tam-14?srsltid=AfmBOorhPjy6WbKEbY9pDyXsYd6dwxkRFFq_c8fF5_tSgnWJ81rRD6H4
 
 [chandrapsaigon.com]
 match = -71.4%%
