--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -136.8%%
-title = Dậy Đi Thôi ♫ Minh Vy ♫ Nhạc Thiếu Nhi Vui Nhộn [MV 2022]
-url = https://www.youtube.com/watch?v=qmJ1qxwFJUc
+match = -115.8%%
+title = Ca Nhạc Thiếu Nhi Múa Hát Vui Nhộn ♫ Em Yêu Trường Em ...
+url = https://www.youtube.com/watch?v=SE3IXVXc07g
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -62,9 +62,9 @@ title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
 url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
-match = -136.8%%
-title = Cây Xương Rồng Nhảy Múa, Loại 120 Bài Hát Vui Nhộn, ...
-url = https://tiki.vn/cay-xuong-rong-nhay-mua-loai-120-bai-hat-vui-nhon-do-choi-tre-em-ht-sys-p275290022.html?spid=275290022
+match = -126.3%%
+title = Mua Đồ Chơi Trẻ Em HT SYS - Bộ Đồ Chơi Lắp Ghép Kỹ ...
+url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p253468081.html
 
 [khodem.vn]
 match = 31.6%%
