--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-07-31 04:17:59
+lastsearch = 2024-07-31 05:40:56
 
 [shopee.vn]
 match = -77.3%%
@@ -83,8 +83,8 @@ url = https://truonganmart.vn/chieu-trai-nen-con-huou-3-5-x-2m/7731
 
 [www.youtube.com]
 match = -104.5%%
-title = Phụ huynh tố bất thường về điểm thi lớp 10, Thái Bình vào ...
-url = https://www.youtube.com/watch?v=Wm_3uCUjncI
+title = Áp thấp nguy hiểm gần biển Đông: PAGASA dự báo sự bùng ...
+url = https://www.youtube.com/watch?v=95k888HSXnc
 
 [thegioithangnhom.com.vn]
 match = -27.3%%
