CI images update

--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-31 04:44:57
+lastsearch = 2024-07-31 06:19:51
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -142,9 +142,9 @@ title = Thi Cong Dap Thuy Dien Hoa Binh (Full) | PDF
 url = https://www.scribd.com/document/486345652/Thi-cong-dap-thuy-dien-Hoa-Binh-Full
 
 [www.vnphoto.net]
-match = -53.6%%
-title = Hoa thơm cỏ lạ [Archive] - Page 85 - VNPHOTO.net Forum
-url = http://www.vnphoto.net/forums/archive/index.php/t-76149-p-85.html
+match = 10.7%%
+title = Topic riêng dành cho dân chơi PENTAX
+url = http://www.vnphoto.net/forums/showthread.php?t=16103&pp=40&page=204
 
 [issuu.com]
 match = -28.6%%
@@ -265,4 +265,9 @@ url = https://www.slideshare.net/slideshow/bqtppt0111/47364367
 match = -12.5%%
 title = game di tam bien
 url = https://muce.edu.vn/android/game-di-tam-bien/
+
+[laichau.gov.vn]
+match = -109.1%%
+title = HO Gikaigic
+url = https://laichau.gov.vn/upload/2000066/fck/files/10(2).pdf
 
