--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-31 00:50:44
+lastsearch = 2024-07-31 06:24:00
 
 [scholar.google.com]
 match = -43.8%%
@@ -49,7 +49,7 @@ url = https://laodongtre.laodong.vn/doi-song/kham-pha-lang-nghe-lam-chieu-long-c
 [www.vinmec.com]
 match = -81.2%%
 title = Chiều cao, cân nặng bé trai 18 tháng tuổi
-url = https://www.vinmec.com/vie/bai-viet/chieu-cao-can-nang-be-trai-18-thang-tuoi-vi
+url = https://www.vinmec.com/vie/bai-viet/chieu-cao-can-nang-be-trai-18-thang-tuoi-vi/
 
 [www.bachhoaxanh.com]
 match = -218.8%%
@@ -112,14 +112,14 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 29/7/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -143.8%%
-title = TIN CHIỀU 29/7: WILLIAMS TỪ CHỐI BARCA?, SỐC: 250 ...
-url = https://www.youtube.com/watch?v=xIDGon1dIn0
+match = -181.2%%
+title = 18 BƯỚC 💥 Modern Tacking CỰC ĐẸP // CÓ HƯỚNG DẪN Ở ...
+url = https://www.youtube.com/watch?v=PWk3nmCXI0k
 
 [books.google.com]
-match = -156.2%%
-title = Nizu #3: Bạn bè - Page 14 - Google Books Result
-url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkNnjis77&sig=ACfU3U1r1UB8QCcwdslx8hNXzz_Yc8B48w&hl=en&sa=X&ved=2ahUKEwjznNfUis2HAxVKFFkFHRAxDTgQ6AF6BAggEAM
+match = -87.5%%
+title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
+url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENQWZ_7Vv&sig=ACfU3U0M0MTtab8IXr25KwjXmdOJdTL35w&hl=en&sa=X&ved=2ahUKEwiduoCu9M-HAxUWrYkEHWqVBJ4Q6AF6BAgdEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
