--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-31 05:01:16
+lastsearch = 2024-07-31 06:18:47
 
 [www.facebook.com]
 match = -141.2%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -235.3%%
-title = Artificial Intelligence in Lung Cancer Screening: The Future Is ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10486721/
+match = -194.1%%
+title = Nine traditional Chinese herbal formulas for the treatment ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5036551/
 
 [books.google.com]
 match = -7.7%%
