--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-31 01:33:21
+lastsearch = 2024-07-31 06:25:24
 
 [bilystore.vn]
-match = -81.0%%
-title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na14/
+match = -95.2%%
+title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
-match = -71.4%%
-title = Thảm nỉ màu trải giường 1m2 1m4 1m5 1m6 1m8 2m2- ...
-url = https://shopee.vn/Thảm-nỉ-màu-trải-giường-1m2-1m4-1m5-1m6-1m8-2m2-MÀU-T14-i.62311235.5150509394
+match = -90.5%%
+title = [HÀNG LOẠI 1] Thảm Lông Cừu 3 Lớp Trải Giường Siêu ...
+url = https://shopee.vn/-HÀNG-LOẠI-1-Thảm-Lông-Cừu-3-Lớp-Trải-Giường-Siêu-Ấm-Áp-Đang-Dạng-Mẫu-Mã-i.174242800.10858430015
 
 [tiki.vn]
 match = -38.1%%
