--- a/images/vo-goi-ke-warmdream-45x65-hq/config.ini
+++ b/images/vo-goi-ke-warmdream-45x65-hq/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 lastopen = 2024-07-01 10:42:00
 
 [search]
-lastsearch = 2024-07-31 04:59:36
+lastsearch = 2024-07-31 06:14:23
 
 [www.diepxuan.com]
-match = 28.6%%
-title = Điệp Xuân Vỏ gối kê màu 45x65
+match = 35.7%%
+title = Vỏ gối kê màu 45x65 - Điệp Xuân
 url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html
 
 [www.head-fi.org]
