--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-31 04:26:41
+lastsearch = 2024-07-31 06:33:27
 
 [demxanh.com]
 match = -84.2%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOorOW7XcC0dGrgqfPYJYUqOtLLUFhBMA8GAmTUwRO9fWfO92_dGx
+url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
 match = -73.7%%
