--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-31 00:34:55
+lastsearch = 2024-07-31 06:26:54
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOoo_cKHfVRVDJ1QVW5ayfD8oOk7lmiWubgh0OangHt4aiSHPA4nj
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [www.htlight.vn]
 match = -26.7%%
