--- a/images/nem-everon-200x200x9/config.ini
+++ b/images/nem-everon-200x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-200x200x9.html
 lastopen = 2024-06-06 17:10:44
 
 [search]
-lastsearch = 2024-07-31 04:28:06
+lastsearch = 2024-07-31 06:28:19
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -19,7 +19,7 @@ url = http://nemxinh.net/thuong-hieu/everon
 [everonvn.com.vn]
 match = 20.0%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOopUcLAVeqyUu-A4EOZQve48WuorL7yjWYGi8BWpDALcKs7ywB60
 
 [everonchinhhang.vn]
 match = -50.0%%
@@ -44,7 +44,7 @@ url = https://demxanh.com/bang-gia-nem-foam-oyasumi.html
 [thegioidemonline.com]
 match = -140.0%%
 title = Bảng giá đệm xơ dừa mới nhất 2022 tại Thế giới đệm Online
-url = https://thegioidemonline.com/bang-gia-dem-xo-dua.html
+url = https://thegioidemonline.com/bang-gia-dem-xo-dua.html?srsltid=AfmBOoqL10_Gk9fmOjcQ8PZBQBJ7HQE1u6Kq4-PvP71ALhkeZINzRtC_
 
 [thegioidemdep.com]
 match = -125.0%%
