--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-31 04:32:12
+lastsearch = 2024-07-31 06:48:27
 
 [shopee.vn]
 match = -41.7%%
-title = Chiếu mây điều hòa các kích thước 1.5m-1.6m-1.8m-2.2x2m
-url = https://shopee.vn/Chiếu-mây-điều-hòa-các-kích-thước-1.5m-1.6m-1.8m-2.2x2m-i.26249437.338321510
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = 29.2%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html?srsltid=AfmBOoquI84y7kJQVr1rEm6z8LLK2QehUowhN-rMPna2yUzct-ow2kMn
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [goni.vn]
 match = 4.2%%
@@ -67,9 +67,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [foreverbedding.net]
-match = 37.5%%
-title = Chiếu điều hòa - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa?srsltid=AfmBOoqvbAzUp7C3qHtugr4bEVskN8v41fIRdRMspw31j4J_c_vwnCoI
+match = -20.8%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [joliefam.vn]
 match = -37.5%%
@@ -159,7 +159,7 @@ url = https://entershopping.vn/chieu-truc/Chieu-dieu-hoa.html
 [fptshop.com.vn]
 match = -45.8%%
 title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
-url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105?srsltid=AfmBOoqll-Xqxv42FnFS2Sn05MS_bGpTaSzPCUukB5HT6NpdP8iklo-Z
+url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 
 [hikawa.com.vn]
 match = -62.5%%
