--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-31 03:47:24
+lastsearch = 2024-07-31 06:58:17
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Chiếu lác D2 09
 url = https://www.diepxuan.com/chieu-lac-d2-09.html
 
 [lacdau.com]
-match = -13.3%%
-title = LOA SADA D209 RGB ĐEN
-url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-den
+match = -26.7%%
+title = LOA SADA D209 RGB TRẮNG
+url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-trang
 
 [batdongsan.com.vn]
-match = -200.0%%
-title = Mua Bán Đất Nền Dự Án đường D2, Quận 9 Giá Rẻ T8/2024
-url = https://batdongsan.com.vn/ban-dat-nen-du-an-duong-d2-61
+match = -140.0%%
+title = Mua Bán Đất đường D2, Quận 9 Giá Rẻ T8/2024
+url = https://batdongsan.com.vn/ban-dat-duong-d2-61
 
 [visaforkorea-vt.com]
 match = -113.3%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/?locale=af_ZA
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -402,9 +402,9 @@ title = TÂY AN - KHAI PHONG - LẠC DƯƠNG
 url = https://tsttourist.com/vn/tay-an-khai-phong-lac-du-TSTOBCN31-TSTOBCN31-13092024-VJ.html
 
 [saca.com.vn]
-match = -166.7%%
-title = CÂU LẠC BỘ GOLF SACA TRÂN TRỌNG CẢM ƠN CÔNG ...
-url = https://saca.com.vn/en/cau-lac-bo-golf-saca-tran-trong-cam-on-cong-ty-dien-quang-thong-minh-dqsmart-tai-tro-luckydraw-giai-golf-tranh-cup-signify-thuong-hieu-chieu-sang-philips.html
+match = -133.3%%
+title = CÂU LẠC BỘ GOLF SACA TRÂN TRỌNG CẢM ƠN ...
+url = https://saca.com.vn/en/cau-lac-bo-golf-saca-tran-trong-cam-on-seven-golf-tai-tro-2-hio-giai-golf-tranh-cup-signify-thuong-hieu-chieu-sang-philips-1722322660.html
 
 [vpcqcsdt.bocongan.gov.vn]
 match = -40.0%%
