--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-31 05:23:46
+lastsearch = 2024-07-31 06:56:18
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,9 +32,9 @@ title = Anthony Edwards (basketball)
 url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
-match = -84.6%%
-title = 3:16 Healthcare | Bremen GA
-url = https://www.facebook.com/316Healthcare/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
 match = -146.2%%
@@ -625,4 +625,9 @@ url = https://www.westernunion.com/gb/en/iban-code.html
 match = -200.0%%
 title = Tour
 url = https://dudeperfect.com/tour
+
+[www.panynj.gov]
+match = -292.3%%
+title = Port Authority of New York and New Jersey: We Keep the ...
+url = http://www.panynj.gov/
 
