--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-31 06:17:09
+lastsearch = 2024-07-31 06:51:29
 
 [www.tui.co.uk]
-match = -33.3%%
-title = Holiday Types 2024/25
-url = https://www.tui.co.uk/holidays
+match = 0.0%%
+title = Buy South Korean won
+url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
-match = -233.3%%
-title = Book Cheap TUI Airways Limited Flights to Seoul
+match = 0.0%%
+title = 
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -258.3%%
-title = TUI shares turn negative ahead of savings decisions
-url = https://www.reuters.com/article/world/tui-shares-turn-negative-ahead-of-savings-decisions-idUSL14490949/
+match = -216.7%%
+title = TUI AG says will not make offer for TUI Travel
+url = https://www.reuters.com/article/business/tui-ag-says-will-not-make-offer-for-tui-travel-idUSTRE49F1VI/
 
 [www.mybaggage.com]
 match = -116.7%%
