--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-30 22:39:46
+lastsearch = 2024-07-31 06:47:45
 
 [www.diepxuan.com]
-match = -125.0%%
-title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
+match = 18.8%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOop5AS2LmWdL3L1qCCKVm6H1yl1D1mnhH9F56F6uY1UTmTT64C9k
 
 [demxanh.com]
 match = -181.2%%
@@ -195,4 +195,9 @@ url = https://www.redbubble.com/i/sticker/Golden-Balance-by-Diremagic/148275584.
 match = -137.5%%
 title = malta travel forum - malta expats - ayd643.com
 url = https://ayd643.com/product/fyaptzxg-246/
+
+[iea504.com]
+match = -143.8%%
+title = gucci premiere perfume notes - More - iea504.com
+url = https://iea504.com/blog/swrrgrue-205/
 
