CI images update

--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-31 06:47:45
+lastsearch = 2024-07-31 08:01:42
 
 [www.diepxuan.com]
 match = 18.8%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOop5AS2LmWdL3L1qCCKVm6H1yl1D1mnhH9F56F6uY1UTmTT64C9k
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demxanh.com]
 match = -181.2%%
