--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-31 02:46:49
+lastsearch = 2024-07-31 08:00:01
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng HOME COLLECTION H16 036 ...
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16036-ga-phu.html
 
 [cuahangchangagoidem.com]
-match = -54.2%%
-title = 16 Bộ Nệm Gối Cho Bé Đi Học Mẫu Giáo Giá Rẻ Tận Xưởng
-url = https://cuahangchangagoidem.com/bo-nem-goi-cho-be-di-hoc-mau-giao/
+match = -45.8%%
+title = Chăn Ga Gối Đệm Cao Cấp Giá Tốt Freeship Tích Điểm
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [tiki.vn]
 match = 0.0%%
@@ -84,7 +84,7 @@ url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạn
 [demxanh.com]
 match = -8.3%%
 title = Bộ chăn ga gối lụa tơ tằm cao cấp King luxury 16
-url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html
+url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html?srsltid=AfmBOopXAnmoUkvfS2MUhWwAC-aNUvcCIj4DSc5VfTSWK16UmYKE3cSD
 
 [changagoibenlinda.com]
 match = -12.5%%
