--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-31 04:55:24
+lastsearch = 2024-07-31 07:52:50
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg
 [www.lazada.vn]
 match = 3.7%%
 title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/?srsltid=AfmBOoq8SMqxo9T2CJbjyBJdP9nZNQncVK6g5NFWztXkK3Kdrqk-QG0X
+url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
 
 [tiki.vn]
 match = -3.7%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chăn tuyết nhung
 [demxanh.com]
 match = -18.5%%
 title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html?srsltid=AfmBOoqhVgJaO-S1xgc4Ypkno5rAXeQW3nx5-vPfB80llpLscQ1N0tLS
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
 
 [ninhouse.vn]
 match = 32.0%%
@@ -37,9 +37,9 @@ title = Mền Tuyết NIN - Liac Snow
 url = https://ninhouse.vn/products/men-tuyet-nin-liac-snow
 
 [www.youtube.com]
-match = -29.6%%
-title = CHÂN GÀ RÚT XƯƠNG SỐT THÁI mềm giòn đậm vị, ăn là ...
-url = https://www.youtube.com/watch?v=vZ2hBBqGbU4
+match = -66.7%%
+title = chăn tuyết thái lan giá rẻ - Chăn lông tuyết - Shop Sắc Mai ...
+url = https://www.youtube.com/watch?v=XHN7YU5NYi4
 
 [baodaknong.vn]
 match = -7.4%%
