--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-31 05:44:15
+lastsearch = 2024-07-31 07:51:45
 
 [demxanh.com]
 match = -60.9%%
 title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html?srsltid=AfmBOorW6cLHdIvsIyrM-Zw5YAFvH8u244IFTxxcmNhagFnNHNzdOqXW
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
 
 [www.lazada.vn]
 match = 47.8%%
 title = Chiếu Trúc cao bằng 1.4 X 1.95
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html?srsltid=AfmBOoqEsVrt72hO8xRLvDkwVvPcCXQwA_Hw9CEXREOU6lCF0pXWEvDq
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
 
 [shopee.vn]
 match = -69.6%%
@@ -29,7 +29,7 @@ url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 [www.diepxuan.com]
 match = 21.7%%
 title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html?srsltid=AfmBOooWRNRt3211M5L0VlX--SqMVKxjIU4DG534AcwrdFaEO22_WObQ
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
 
 [chieutrucsaigon.com]
 match = -17.4%%
