--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-07-31 06:49:48
+lastsearch = 2024-07-31 07:58:18
 
 [demxanh.com]
-match = -9.1%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -15.2%%
+title = Hướng dẫn cách gấp chiếu trúc hạt nhanh gọn và đúng cách
+url = https://demxanh.com/huong-dan-cach-gap-chieu-truc-hat-nhanh-gon-va-dung-cach.html
 
 [www.diepxuan.com]
 match = 100.0%%
