--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-07-31 02:20:08
+lastsearch = 2024-07-31 07:55:11
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -23,13 +23,13 @@ url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
 match = -3.6%%
-title = chiếu trúc hạt giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc hạt
+title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
 
 [www.diepxuan.com]
 match = 28.6%%
 title = Chiếu trúc Quế Lâm II 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html?srsltid=AfmBOopGnB_ICahFTcTiyHKhr_WzRogcigx7i3BuLgDpoEuIGVwbMUqn
+url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html
 
 [www.lazada.vn]
 match = 70.4%%
