--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-31 05:35:22
+lastsearch = 2024-07-31 07:55:54
 
 [www.zillow.com]
 match = -69.2%%
@@ -527,9 +527,9 @@ title = Summer Meals for Kids Site Finder
 url = https://www.fns.usda.gov/summer/sitefinder
 
 [sos.ga.gov]
-match = -292.3%%
-title = application for a cosmetology or barber salon/shop license
-url = https://sos.ga.gov/sites/default/files/forms/28 Application - Salon or Shop.pdf
+match = -323.1%%
+title = The Elections Division of the Georgia Secretary of State's ...
+url = https://sos.ga.gov/elections-division-georgia-secretary-states-office
 
 [www.lgbtmap.org]
 match = -69.2%%
