--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-31 05:12:31
+lastsearch = 2024-07-31 07:59:18
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -34,7 +34,7 @@ url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 [www.lazada.vn]
 match = 20.8%%
 title = Mùng Tự Bung đỉnh Vuông Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/?srsltid=AfmBOorpF4hFcRrQti3wLKwCbCB0yfIfHSKjYU4xRV2PBRIsLrsW5N29
+url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
 
 [munghoangphat.com]
 match = -33.3%%
