CI images update

--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-31 06:31:24
+lastsearch = 2024-07-31 08:43:56
 
 [burningman.org]
 match = -60.0%%
@@ -414,7 +414,7 @@ url = https://wayne.edu/
 [www.usnews.com]
 match = 0.0%%
 title = 
-url = https://www.usnews.com/best-colleges/jhu-2077
+url = https://www.usnews.com/best-colleges/university-of-california-irvine-1314
 
 [www.spl.org]
 match = -113.3%%
@@ -817,9 +817,9 @@ title = Alameda County Sheriff's Office, CA | Home
 url = https://www.alamedacountysheriff.org/
 
 [www.sos.state.mn.us]
-match = -153.3%%
-title = Minnesota Secretary Of State - Register To Vote
-url = https://www.sos.state.mn.us/elections-voting/register-to-vote/
+match = -166.7%%
+title = Minnesota Secretary Of State - Vote early by mail
+url = https://www.sos.state.mn.us/elections-voting/other-ways-to-vote/vote-early-by-mail/
 
 [www.nih.gov]
 match = -260.0%%
@@ -1115,4 +1115,14 @@ url = https://www.wisn.com/
 match = 0.0%%
 title = 
 url = https://www.fca.org.uk/firms/authorisation/consumer-investments
+
+[uci.edu]
+match = 6.7%%
+title = UC Irvine: Home
+url = https://uci.edu/
+
+[www.lottenypalace.com]
+match = -253.3%%
+title = Lotte New York Palace | Hotels in Manhattan | Official Website
+url = https://www.lottenypalace.com/
 
