--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-31 06:54:55
+lastsearch = 2024-07-31 08:47:21
 
 [chieutrelanlan.com]
-match = -16.7%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 120x190cm
-url = https://chieutrelanlan.com/chieu-truc-cao-cap-mat-nho-loai-khong-vien-mau-den-120x190cm-29.html
+match = -41.7%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [kyoryo.vn]
 match = -54.2%%
@@ -52,9 +52,9 @@ title = FULL TRẬN | Carlo Biado vs Wiktor Zielinski | Last 16 | GIẢI ...
 url = https://www.youtube.com/watch?v=KTfTvlPEy1o
 
 [www.facebook.com]
-match = 5.3%%
-title = Thế Giới Chiếu Trúc
-url = https://www.facebook.com/thegioichieutruc/
+match = 8.3%%
+title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
+url = https://www.facebook.com/chieutructot/
 
 [chieutrucsaigon.com]
 match = 12.5%%
@@ -77,9 +77,9 @@ title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [demxanh.com]
-match = -45.8%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 25.0%%
+title = Chiếu trúc hạt Hương Trúc nâu cà phê
+url = https://demxanh.com/chieu-truc-hat-huong-truc-nau.html?srsltid=AfmBOooDqgSS6Bw1A1zsgFMSZKADHwOLO7lDdc1U10UET0rGU5Me9QUd
 
 [www.diepxuan.com]
 match = 100.0%%
