--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-31 06:50:28
+lastsearch = 2024-07-31 08:45:19
 
 [burningman.org]
 match = 0.0%%
@@ -787,8 +787,8 @@ title = WEAU | Homepage | Wisconsin
 url = https://www.weau.com/
 
 [humane.com]
-match = -33.3%%
-title = Humane: Ai Pin - Wearable Ai
+match = -60.0%%
+title = Ai Pin - Wearable Ai | Humane
 url = https://humane.com/
 
 [www.kare11.com]
