--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-31 06:59:43
+lastsearch = 2024-07-31 08:50:51
 
 [www.amazon.com]
-match = -309.1%%
-title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
-url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
+match = -100.0%%
+title = Ghe da yeu thuong - Hugo Luân
+url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
 
 [chungauto.vn]
-match = -209.1%%
-title = Bọc ghế da công nghiệp cho ô tô hàng chuẩn
-url = https://chungauto.vn/ghe-da-cong-nghiep-oto-p995.html
+match = -372.7%%
+title = Bọc ghế da Simili ô tô hàng chất lượng | Giá tốt, trả góp 0%%
+url = https://chungauto.vn/boc-ghe-da-simili-cho-oto-p996.html
 
 [decoviet.vn]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -290.9%%
-title = Ghế da lãnh đạo SG936 | Ghế xoay văn phòng Hòa Phát
-url = https://noithathoaphat.com/ghe-da-lanh-dao-sg936
+match = -227.3%%
+title = Ghế da chân quỳ TFMQD56 - Nội Thất Hòa Phát
+url = https://noithathoaphat.com/ghe-da-chan-quy-tfmqd56
 
 [dandoxe.com]
 match = -154.5%%
@@ -190,4 +190,9 @@ url = https://thamtraisangiadinh.com/tham-trai-ghe-go
 match = -227.3%%
 title = Bàn ghế đá tự nhiên GDTN-48 | Ghe da tu nhien
 url = https://ghedaviet.com/ban-ghe-da-tu-nhien-gdtn-48
+
+[epione.vn]
+match = -154.5%%
+title = Ghế công thái học – Epione Viet Nam
+url = https://epione.vn/collections/ghe-cong-thai-hoc
 
