--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-31 06:52:10
+lastsearch = 2024-07-31 08:51:15
 
 [www.lazada.vn]
 match = -212.5%%
@@ -23,8 +23,8 @@ url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
 match = -200.0%%
-title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
-url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
+title = obessed with this 90’s brown lip duo by @Huda Beauty ...
+url = https://www.tiktok.com/@andrearomanofficial/video/7384118842538200353
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
