--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-31 03:51:12
+lastsearch = 2024-07-31 09:11:46
 
 [www.instagram.com]
 match = -161.5%%
@@ -12,9 +12,9 @@ title = (@katrinacyt) • Instagram photos and videos
 url = https://www.instagram.com/katrinacyt/
 
 [hk.linkedin.com]
-match = -76.9%%
-title = Fanny Chan - Christian Dior Couture
-url = https://hk.linkedin.com/in/fanny-chan-938952bb
+match = -215.4%%
+title = Vincy Chan - Christian Dior高級時裝公司
+url = https://hk.linkedin.com/in/vincy-chan-982992221
 
 [wwd.com]
 match = -253.8%%
