--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-07-31 04:18:21
+lastsearch = 2024-07-31 09:10:19
 
 [shadow.vn]
 match = -140.0%%
@@ -14,7 +14,7 @@ url = https://shadow.vn/den-pin-chieu-xa-fenix-ht18r
 [chuyentactical.com]
 match = 0.0%%
 title = Đèn Pin Fenix - HT18R
-url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/?srsltid=AfmBOootVTvgAp27T5qsZ_yWsne3vjwUbjRX1JCPrBL1UI_N4DyqQAoU
+url = https://chuyentactical.com/den-pin/den-pin-fenix-ht18r/
 
 [bisu.vn]
 match = -113.3%%
