--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-31 06:56:18
+lastsearch = 2024-07-31 09:12:28
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -369,7 +369,7 @@ url = https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=celex:12020W/TXT
 [www.google.com]
 match = 0.0%%
 title = Google Maps
-url = https://www.google.com/maps/?q=,
+url = https://www.google.com/maps/dir/
 
 [data.census.gov]
 match = -38.5%%
