--- a/images/ruot-nem-korea-150x190x09/config.ini
+++ b/images/ruot-nem-korea-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-150x190x09.html
 lastopen = 2024-06-11 23:30:16
 
 [search]
-lastsearch = 2024-07-31 08:45:40
+lastsearch = 2024-07-31 09:08:00
 
 [www.riotgames.com]
 match = -84.0%%
@@ -14,7 +14,7 @@ url = https://www.riotgames.com/en/work-with-us/offices/seoul
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Geography_of_South_Korea
+url = https://en.wikipedia.org/wiki/Names_of_Korea
 
 [www.youtube.com]
 match = -64.0%%
