--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-31 06:13:37
+lastsearch = 2024-07-31 09:11:03
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOor9AOEeYg8sAYeXr7fcv-RFECgbh6AUiFoYz_vtZYb-O7jmScUP
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
 
 [shopee.vn]
 match = -105.0%%
@@ -24,12 +24,12 @@ url = https://h5.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038
 [bilystore.vn]
 match = -100.0%%
 title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na18/?srsltid=AfmBOoo9eD0cQKjSa1p3WBwFxj6QtFhyFgFduhWLTOTaLpKx4rHsyChI
+url = https://bilystore.vn/tham-phong-ngu-na18/
 
 [www.lazada.vn]
 match = -5.0%%
 title = BỘ 18 NÚT NHỰA GIƯỜNG XẾP NHÔM US
-url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html?srsltid=AfmBOoqv6Bjao0kcXzw2QprRjWGQpgtNlD3i68PLWFnHwhw1zX8hDEtJ
+url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html
 
 [fhomehatinh.com]
 match = -140.0%%
@@ -104,7 +104,7 @@ url = https://dogothanhha.vn/san-pham/bo-giuong-ngu-co-dien-cd-18--1467&p=3
 [smlife.vn]
 match = -95.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 18 | SMLIFE.vn
-url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18?srsltid=AfmBOorkPmmR4a519kPRcwR0YjgtxIflPvsXlcjoxOQtiRdAFLzUQqGw
+url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18
 
 [giuongbenhbaominh.vn]
 match = -95.0%%
