--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-31 06:15:01
+lastsearch = 2024-07-31 09:04:55
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -44,7 +44,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 [www.diepxuan.com]
 match = 36.4%%
 title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOopcGlpqaYD4lxMNhNknzhPL_Qccc52d8ZLiL1JH_7IcKzCwmZii
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [www.lazada.vn]
 match = -77.3%%
