CI images update

--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-31 08:03:05
+lastsearch = 2024-07-31 09:41:57
 
 [changagoidemsonghong.com]
-match = 18.5%%
-title = chăn ga gối cotton cao cấp Archives
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-cao-cap
+match = 37.0%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [demhong.vn]
 match = 11.1%%
@@ -24,7 +24,7 @@ url = https://demviethong.com/chan-ga-goi-song-hong-uc16/
 [demxanh.com]
 match = 48.1%%
 title = Bộ ga gối hoạt hình Cotton CT16
-url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html
+url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOorzdUrnNdnOb0-b8M5VYWOxBBLiEmMa7a2FveFhiMrvRjW4l_MR
 
 [chanrathanhthuy.com]
 match = -90.9%%
