--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-31 03:51:52
+lastsearch = 2024-07-31 09:39:50
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -40.0%%
-title = Đèn Trang Trí HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-trang-tri
+match = -13.3%%
+title = Đèn chiếu điểm HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
 match = -193.3%%
@@ -57,9 +57,9 @@ title = HT - Exoticzone
 url = https://hactexoticzone.com/
 
 [www.youtube.com]
-match = -213.3%%
-title = Người dân Mỹ Đức nhớ thương Tổng Bí thư Nguyễn Phú Trọng
-url = https://www.youtube.com/watch?v=rmwTPd0iK64
+match = -166.7%%
+title = CHƠI- kỳ 10- Ngón Tay Chỉ Trăng -HT THÍCH TỪ THÔNG
+url = https://www.youtube.com/watch?v=tZWh9zAOkYM
 
 [thaibinhseed.com.vn]
 match = -193.3%%
