--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-31 06:33:06
+lastsearch = 2024-07-31 09:28:08
 
 [shopee.vn]
-match = 8.8%%
-title = Chiếu điều hoà và 2 vỏ gối Latex cao su non loại 1 sẵn hàng
-url = https://shopee.vn/Chiếu-điều-hoà-và-2-vỏ-gối-Latex-cao-su-non-loại-1-sẵn-hàng-i.16397825.1036019362
+match = 35.3%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [olbedding.com]
 match = 11.8%%
@@ -37,9 +37,9 @@ title = Chiếu Điều Hòa Cao Su Non
 url = https://www.facebook.com/groups/753270865357544/
 
 [khonemtonghop.com]
-match = 30.0%%
-title = Chiếu Cao Su Non Có Tốt Không?
-url = https://khonemtonghop.com/chieu-cao-su-non-co-tot-khong/
+match = 58.8%%
+title = Chiếu điều Hòa Cao Su Non Là Gì ...
+url = https://khonemtonghop.com/chieu-dieu-hoa-cao-su-non-la-gi/
 
 [suongtuyet.com]
 match = 17.6%%
