--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-31 08:50:51
+lastsearch = 2024-07-31 09:33:43
 
 [www.amazon.com]
-match = -100.0%%
-title = Ghe da yeu thuong - Hugo Luân
-url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
+match = -309.1%%
+title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
+url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
 
 [chungauto.vn]
-match = -372.7%%
-title = Bọc ghế da Simili ô tô hàng chất lượng | Giá tốt, trả góp 0%%
-url = https://chungauto.vn/boc-ghe-da-simili-cho-oto-p996.html
+match = -209.1%%
+title = Bọc ghế da công nghiệp cho ô tô hàng chuẩn
+url = https://chungauto.vn/ghe-da-cong-nghiep-oto-p995.html
 
 [decoviet.vn]
 match = -200.0%%
@@ -28,8 +28,8 @@ url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
 match = -227.3%%
-title = Ghế da chân quỳ TFMQD56 - Nội Thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-chan-quy-tfmqd56
+title = SG912 Ghế xoay da lãnh đạo cấp trưởng phòng
+url = https://noithathoaphat.com/ghe-da-truong-phong-sg912
 
 [dandoxe.com]
 match = -154.5%%
@@ -102,9 +102,9 @@ title = BÀN GHẾ ĐÁ THỦ ĐỨC – GIAO HÀNG MIỄN PHÍ TẬN NƠI
 url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 
 [www.lazada.vn]
-match = -290.9%%
-title = Đệm Lót Ghế Da Chống Bẩn Chống Thấm Nước Dày Dặn ...
-url = https://www.lazada.vn/products/dem-lot-ghe-da-chong-ban-chong-tham-nuoc-day-dan-dem-lot-ghe-ban-an-dem-ghe-chong-truot-hinh-mong-ngua-van-phong-ngoi-lau-i2424774730.html?srsltid=AfmBOop6ROWm5WD63gceHRmvgRJ_VQTFUEX7F8H0t3SyzPN_hSAS2Xyk
+match = -136.4%%
+title = Thảm Lót Ghế Sofa Da Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/tham-lot-ghe-sofa-da/?srsltid=AfmBOopsGswHNxrNdf9u7C3Er3-h-uG2tKrNFddjkubQKnMgCR0IqFft
 
 [richhome.vn]
 match = -190.9%%
