--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-31 05:37:02
+lastsearch = 2024-07-31 09:40:12
 
 [noithathomy.com]
 match = -42.9%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-
 [www.lazada.vn]
 match = -104.8%%
 title = Thảm trải sàn phòng khách BALI sang trọng loại to KT 2m x ...
-url = https://www.lazada.vn/products/tham-trai-san-phong-khach-bali-sang-trong-loai-to-kt-2m-x-3m-nen-xanh-duong-hoa-van-mau-trang-in-3d-sac-net-i281430696.html?srsltid=AfmBOorSdeoRlMp9TjyfyK2uBXVTs2C7y20atBVz7p-yDRSVpE1olXlH
+url = https://www.lazada.vn/products/tham-trai-san-phong-khach-bali-sang-trong-loai-to-kt-2m-x-3m-nen-xanh-duong-hoa-van-mau-trang-in-3d-sac-net-i281430696.html
 
 [tiki.vn]
 match = -9.5%%
