--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-31 08:51:37
+lastsearch = 2024-07-31 09:46:48
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 09
 url = https://www.diepxuan.com/chieu-lac-d2-09.html
 
 [lacdau.com]
-match = -13.3%%
-title = LOA SADA D209 RGB ĐEN
-url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-den
+match = -26.7%%
+title = LOA SADA D209 RGB TRẮNG
+url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-trang
 
 [batdongsan.com.vn]
 match = -140.0%%
@@ -404,7 +404,7 @@ url = https://tsttourist.com/vn/tay-an-khai-phong-lac-du-TSTOBCN31-TSTOBCN31-130
 [saca.com.vn]
 match = -133.3%%
 title = CÂU LẠC BỘ GOLF SACA TRÂN TRỌNG CẢM ƠN ...
-url = https://saca.com.vn/en/cau-lac-bo-golf-saca-tran-trong-cam-on-seven-golf-tai-tro-2-hio-giai-golf-tranh-cup-signify-thuong-hieu-chieu-sang-philips-1722322660.html
+url = https://saca.com.vn/en/cau-lac-bo-golf-saca-tran-trong-cam-on-seven-golf-tai-tro-2-hio-giai-golf-tranh-cup-signify-thuong-hieu-chieu-sang-philips.html
 
 [vpcqcsdt.bocongan.gov.vn]
 match = -40.0%%
