--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-31 04:58:35
+lastsearch = 2024-07-31 09:57:13
 
 [www.diepxuan.com]
-match = -27.3%%
-title = Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html?srsltid=AfmBOoplb_oOfeDUsPbhyq2mcK-nmr3YZ7mRL-mSdfq6TdUmzeZbVKZC
+match = -72.7%%
+title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
 match = 13.6%%
@@ -29,7 +29,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 [www.lazada.vn]
 match = -50.0%%
 title = Bộ Ga Giường Cao Cấp Loại Ga Chun Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/bo-ga-giuong-cao-cap-loai-ga-chun/?srsltid=AfmBOoqctcgFUWRfnEgp2yPzNy0_bht7ZNSAKaAgEFrIQRYZnumg4frF
+url = https://www.lazada.vn/tag/bo-ga-giuong-cao-cap-loai-ga-chun/
 
 [www.instagram.com]
 match = 4.5%%
