--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-07-31 04:27:42
+lastsearch = 2024-07-31 09:48:31
 
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOoraukXEpzj0t5FnfGwBgEryNOhdphcEBe1ahdjKIk_VENdUQwvc
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [entershopping.vn]
 match = -13.8%%
@@ -34,7 +34,7 @@ url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 [thegioidemonline.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel Xanh nhạt
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOoqeHTFj5f2U0HBFrnOU_xDX6aAUb3KKphHNTQsF77pBrlXnDbex
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [khodem.vn]
 match = 55.2%%
