--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-07-31 07:48:14
+lastsearch = 2024-07-31 09:58:20
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -77,9 +77,9 @@ title = Lý thuyết về con lắc lò xo - Vật Lý 12
 url = https://vuihoc.vn/tin/thpt-ly-thuyet-ve-con-lac-lo-xo-vat-ly-12-1901.html
 
 [concung.com]
-match = -162.5%%
-title = Thú bông treo nôi mặt voi kèm lục lạc, gặm nướu giá tốt
-url = https://concung.com/do-choi-em-be/thu-bong-treo-noi-mat-voi-kem-luc-lac-gam-nuou-55666.html
+match = -137.5%%
+title = Khăn rối mặt gấu kèm lục lạc, gặm nướu (Xanh dương)
+url = https://concung.com/do-choi-em-be/khan-roi-mat-gau-kem-luc-lac-gam-nuou-xanh-duong-55669.html
 
 [shopee.vn]
 match = -18.8%%
