--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-31 08:48:03
+lastsearch = 2024-07-31 10:01:45
 
 [www.zillow.com]
 match = -69.2%%
@@ -132,9 +132,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [twitter.com]
-match = 8.3%%
-title = Aisha S Gani
-url = https://twitter.com/aishagani?lang=en
+match = -69.2%%
+title = dargandhi123 - Darwish Gani
+url = https://twitter.com/dargandhi123
 
 [kidshealth.org]
 match = 0.0%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOooSptJqNDNa_4yjIDFG-F5dXmMNLRemV4pJt8qtCwab3F39RsaD
+url = https://www.lazada.vn/tag/ga-ni-long/
 
 [www.njcaa.org]
 match = -140.0%%
