--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-31 09:35:46
+lastsearch = 2024-07-31 09:50:20
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -309.1%%
-title = Có bán Tủ đầu giường bằng gỗ tại Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/wood-nightstands/?locale=vi_VN
+match = -272.7%%
+title = Giường & khung giường màu xám gần Kasson, Minnesota
+url = https://www.facebook.com/marketplace/112065005476018/gray-bed-frames/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -59,7 +59,7 @@ url = https://www.lazada.vn/tag/giuong-1-m-6/?innerlink=hot_v1
 [hoaphatsaigon.com]
 match = -272.7%%
 title = Giường ngủ GN1.6 | Nội Thất Chính Hãng tại Miền Nam
-url = https://hoaphatsaigon.com/2258-giuong-ngu-gn1.6.html?srsltid=AfmBOoqmjXGjichfhEjgBkt7JZ79HEBWNzvzIsUe41w19XVjIl7lOtK_
+url = https://hoaphatsaigon.com/2258-giuong-ngu-gn1.6.html
 
 [giuongbenh.vn]
 match = -163.6%%
@@ -74,7 +74,7 @@ url = https://en.bab.la/dictionary/vietnamese-english/giường
 [jangin.vn]
 match = -354.5%%
 title = Giường Mika Q(1.6m) Chân cao - 장인가구 - Nội Thất Hàn ...
-url = https://jangin.vn/shop/giuong-mika-q1-6m-chan-cao/?srsltid=AfmBOoq_Kp75sG2Wyr3hUcqyAwC7w_e5tGygxM73DnJO9873HPwNlHF_
+url = https://jangin.vn/shop/giuong-mika-q1-6m-chan-cao/
 
 [www.litera.com]
 match = 0.0%%
