--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-07-31 03:15:47
+lastsearch = 2024-07-31 09:50:41
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -12,14 +12,14 @@ title = ĐỆM LÒ XO EVERON, KING KOIL
 url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [everonkorea.com]
-match = 31.8%%
-title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
-url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
+match = 31.9%%
+title = Đệm lò xo Everon - Nệm King Koil thương hiệu Mỹ tại Việt ...
+url = https://everonkorea.com/dem-lo-xo/
 
 [demxanh.com]
-match = 29.8%%
-title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
+match = 27.9%%
+title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
 
 [nemragoi.com]
 match = 37.9%%
