--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-31 09:33:43
+lastsearch = 2024-07-31 09:54:45
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -227.3%%
-title = SG912 Ghế xoay da lãnh đạo cấp trưởng phòng
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg912
+match = -309.1%%
+title = Ghế xoay da trưởng phòng - SG903 - Nội thất Hòa Phát
+url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
 
 [dandoxe.com]
 match = -154.5%%
@@ -104,12 +104,12 @@ url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 [www.lazada.vn]
 match = -136.4%%
 title = Thảm Lót Ghế Sofa Da Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/tham-lot-ghe-sofa-da/?srsltid=AfmBOopsGswHNxrNdf9u7C3Er3-h-uG2tKrNFddjkubQKnMgCR0IqFft
+url = https://www.lazada.vn/tag/tham-lot-ghe-sofa-da/?srsltid=AfmBOorQZ8VgAYAZUGDk_GJz9iIeH5tbUjTZLUZyEshpGBVKe7rb92XL
 
 [richhome.vn]
 match = -190.9%%
 title = Hướng dẫn cách xử lý ghế sofa da bị thâm
-url = https://richhome.vn/huong-dan-cach-xu-ly-ghe-sofa-da-bi-tham/
+url = https://richhome.vn/huong-dan-cach-xu-ly-ghe-sofa-da-bi-tham/?srsltid=AfmBOoqJlKBRvkTKZ0JzLV302dNRB-JxZ9XCqtxWbqBE9MARN5yZEXx8
 
 [auto1998.vn]
 match = -336.4%%
