--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-30 20:55:20
+lastsearch = 2024-07-31 10:26:02
 
 [everon.online]
 match = -7.4%%
@@ -14,7 +14,7 @@ url = https://everon.online/products/bo-everon-sr01
 [everonvn.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
-url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039?srsltid=AfmBOorAeDqH0DgOYhO-5KM0T1nuXaz5qrhQj-vEjcKJt9ql2h2HmTYT
+url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -24,7 +24,7 @@ url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 [demxanh.com]
 match = -7.4%%
 title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOooQey_JZBsGB3mmtchkAuyrFdtz_af6U-aFA1-EpBep8_N0fIX6
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối Everon EPC-21053
 url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
 
 [everonhn.com.vn]
-match = 33.3%%
-title = Bộ chăn ga Everon ESB -22020
-url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
+match = -18.5%%
+title = Bộ chăn ga Artemis ASM 20101 - Everon Hà Nội
+url = https://everonhn.com.vn/bo-chan-ga-artemis-asm-20101
 
 [everon.net.vn]
 match = -18.5%%
