--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-31 09:11:24
+lastsearch = 2024-07-31 10:31:27
 
 [screenrant.com]
 match = 0.0%%
@@ -32,8 +32,8 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -50.0%%
-title = Explore my Options | USCIS
+match = -7.1%%
+title = Explore my Options
 url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
@@ -82,9 +82,9 @@ title = 10 Evidence-Based Benefits of Green Tea
 url = https://www.healthline.com/nutrition/top-10-evidence-based-health-benefits-of-green-tea
 
 [en.wikipedia.org]
-match = -20.0%%
-title = Green card
-url = https://en.wikipedia.org/wiki/Green_card
+match = 7.1%%
+title = Little green men
+url = https://en.wikipedia.org/wiki/Little_green_men
 
 [www.imdb.com]
 match = -92.9%%
@@ -167,9 +167,9 @@ title =
 url = https://www.theatlantic.com/culture/archive/2023/12/blue-eye-samurai-netflix/676915/
 
 [www.beyondblue.org.au]
-match = -21.4%%
-title = Understand Depression
-url = https://www.beyondblue.org.au/mental-health/depression
+match = -257.1%%
+title = Beyond Blue | 24/7 Support for Anxiety, Depression and ...
+url = https://www.beyondblue.org.au/
 
 [pubchem.ncbi.nlm.nih.gov]
 match = -192.9%%
