--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-31 09:39:50
+lastsearch = 2024-07-31 10:55:32
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -27,9 +27,9 @@ title = Đèn chiếu điểm HT MAX LIGHT
 url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
-match = -193.3%%
-title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
-url = https://www.htlightlevel.vn/den-roi-co-5w/
+match = -160.0%%
+title = Công Ty Sản Xuất Đèn LED Chiếu Sáng HT Light Level
+url = https://www.htlightlevel.vn/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
