--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-31 10:29:46
+lastsearch = 2024-07-31 10:56:35
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -240,4 +240,19 @@ url = https://dsvn.vn/
 match = -8.3%%
 title = Dawaco – Vì cuộc sống chất lượng hơn
 url = https://dawaco.com.vn/
+
+[www.ptsc.com.vn]
+match = -20.0%%
+title = PTSC: Trang chủ
+url = https://www.ptsc.com.vn/
+
+[hcdc.vn]
+match = -66.7%%
+title = TRUNG TÂM KIỂM SOÁT BỆNH TẬT THÀNH PHỐ HỒ CHÍ ...
+url = https://hcdc.vn/
+
+[www.petrolimex.com.vn]
+match = -91.7%%
+title = Trang chủ :: Petrolimex (PLX) - Tập đoàn Xăng dầu Việt Nam
+url = https://www.petrolimex.com.vn/
 
