--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-31 03:31:43
+lastsearch = 2024-07-31 10:52:01
 
 [www.bible.com]
-match = -135.7%%
-title = JOHANA 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
+match = -128.6%%
+title = MARKA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -22,14 +22,14 @@ title = Mùng chụp tự bung F1 - màu trắng
 url = https://mungmocmien.com/products/nhan-ban-tu-mung-chup-tu-bung-f1-mau-xanh
 
 [munghoangphat.com]
-match = -150.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -135.7%%
+title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [manthutrang.com]
-match = -207.1%%
-title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
-url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
+match = -228.6%%
+title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
+url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
 
 [easydream.vn]
 match = -178.6%%
