--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-31 08:44:37
+lastsearch = 2024-07-31 11:00:48
 
 [en.wikipedia.org]
-match = 10.0%%
-title = Anti-Korean sentiment
-url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -422,9 +422,9 @@ title = Outlook India - India's Best Magazine| Find Latest News, Top ...
 url = https://www.outlookindia.com/
 
 [twitter.com]
-match = -33.3%%
-title = Ifang Bremer
-url = https://twitter.com/IfangBremer/status/1801089320365031905
+match = -25.0%%
+title = Big Bad Bear (@BigBadBear_) / X
+url = https://twitter.com/bigbadbear_
 
 [www.girlsnotbrides.org]
 match = 0.0%%
