CI images update

--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-31 08:47:02
+lastsearch = 2024-07-31 12:21:12
 
 [shopee.vn]
 match = -41.7%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = 29.2%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html?srsltid=AfmBOoqJ2-0o-r7mbhNPXmT0OUnGsI0IfUvS3RMvG7aGNt8zsbOQOgcx
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [goni.vn]
 match = 4.2%%
@@ -29,7 +29,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demluxury.com.vn]
 match = -8.3%%
 title = Chiếu mát, chiếu điều hòa cao cấp Luxury Home
-url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/?srsltid=AfmBOoryAu7OD-Wa_xlWjmDbdVqvH-zgYAlueHXVHaQ452-bG9o8XP9l
+url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/
 
 [kyoryo.vn]
 match = -58.3%%
