--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-31 03:13:42
+lastsearch = 2024-07-31 12:15:42
 
 [vinatools.com]
 match = -140.0%%
@@ -12,8 +12,8 @@ title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
 url = https://vinatools.com/keo-cat-ton-d-216-116/
 
 [www.vietnamairport.vn]
-match = -240.0%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
+match = -213.3%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [noibaiairport.vn]
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -186.7%%
-title = Ways Station Gaming - Ngày mai 7/3 chi nhánh 16 ...
-url = https://www.facebook.com/photo.php?fbid=1220848438345777&id=139181649845800&set=a.179106562519975
+match = -160.0%%
+title = BẠN CÓ HẸN VỚI PERCE%%T NGUYỄN GIA TRÍ 69/1/7 ...
+url = https://www.facebook.com/percentcoffee.vn/videos/bạn-có-hẹn-với-percet-nguyễn-gia-trí6917-nguyễn-gia-trí-p25-quận-bình-thạnh-với-/2962693920542427/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -237,8 +237,8 @@ title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
 
 [www.axel-gl.com]
-match = -213.3%%
-title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông ...
+match = -260.0%%
+title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông qua lỗ ...
 url = https://www.axel-gl.com/vi-vn/asone/d/63-5174-24/
 
 [hcmyu.hpu2.edu.vn]
