--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-07-31 05:13:11
+lastsearch = 2024-07-31 12:23:34
 
 [dvan.org]
 match = -41.7%%
@@ -182,9 +182,9 @@ title = Home | Department of Social Justice and Empowerment ...
 url = https://socialjustice.gov.in/
 
 [www.youtube.com]
-match = -333.3%%
-title = Rick Astley - Never Gonna Give You Up (Official Music Video)
-url = https://www.youtube.com/watch?v=dQw4w9WgXcQ
+match = 8.3%%
+title = YouTube: Home
+url = https://www.youtube.com/
 
 [dbtindia.gov.in]
 match = -308.3%%
@@ -205,4 +205,19 @@ url = https://vuongquocgaubong.com/san-pham/gau-bong-goi-om-miniso-gia-re-cao-ca
 match = -316.7%%
 title = Department of Empowerment of Persons with Disabilities ...
 url = https://depwd.gov.in/
+
+[mymemory.translated.net]
+match = -275.0%%
+title = Results for goi om translation from Vietnamese to English
+url = https://mymemory.translated.net/en/Vietnamese/English/goi-om
+
+[www.cgspublicationindia.com]
+match = -300.0%%
+title = Pay
+url = http://www.cgspublicationindia.com/GOI OM Pay.aspx
+
+[documents.doptcirculars.nic.in]
+match = -325.0%%
+title = No.4/3/20 17-Estt(Pay-I) Government of India Ministry of ...
+url = https://documents.doptcirculars.nic.in/D2/D02est/omrufYm.pdf
 
