--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-31 11:00:48
+lastsearch = 2024-07-31 12:10:58
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = 10.0%%
+title = Anti-Korean sentiment
+url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Korea vs. Kína döntője lesz az MSI-nek!
 url = https://esport1.hu/news/2018/05/20/esport-aioween-leagueoflegends-riot-games-msi-mid-season-invitational-donto-kingzone-vs-rng
 
 [cryptoslate.com]
-match = 5.0%%
-title = Cryptocurrency Rankings
-url = https://cryptoslate.com/coins/
+match = -65.0%%
+title = CryptoSlate: Crypto News, Insights & Data
+url = https://cryptoslate.com/
 
 [30rates.com]
 match = -125.0%%
