--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-31 10:44:23
+lastsearch = 2024-07-31 12:20:51
 
 [shopee.vn]
 match = -8.3%%
@@ -83,8 +83,8 @@ url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.h
 
 [sieuthinguyenkim.com]
 match = -62.5%%
-title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
-url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
+title = Thảm lông mềm trải chân giường, lót ghế ngồi nhiều size 40x60
+url = https://sieuthinguyenkim.com/tham-long-mem-trai-chan-giuong-nti177943446.html
 
 [huyenikea.com]
 match = -4.2%%
