--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-07-31 09:33:22
+lastsearch = 2024-07-31 12:25:31
 
 [shopee.vn]
-match = -100.0%%
-title = Thảm chiếu đa năng trải sàn trải giường loại mỏng dùng 4 ...
-url = https://shopee.vn/Thảm-chiếu-đa-năng-trải-sàn-trải-giường-loại-mỏng-dùng-4-mùa.-tấm-trải-nệm-mỏng-i.78513158.10635430597
+match = -76.2%%
+title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 
 [cafeland.vn]
 match = -100.0%%
@@ -175,4 +175,9 @@ url = https://www.dungcuykhoathammytuankiet.com/products/giuong-benh-nhan-12-chu
 match = -114.3%%
 title = Giường Ngủ GN-12. Nội thất Tâm Việt chuyên cung cấp ...
 url = https://noithattamviet.com/giuong-ngu-tam-viet-gn-12
+
+[decor.lanha.vn]
+match = -52.4%%
+title = Giường bọc nệm - LND 12 - Nội thất là nhà
+url = https://decor.lanha.vn/san-pham/giuong-boc-nem-lnd-12/
 
