--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-31 06:25:11
+lastsearch = 2024-07-31 12:11:38
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -12,9 +12,9 @@ title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
-match = 0.0%%
-title = Bộ sản phẩm SH_BC22 057
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
+match = 4.3%%
+title = Bộ sản phẩm SH_BC23 080
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-87
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 26.5%%
-title = Bộ Chăn Ga Gối Tơ Tằm Cao Cấp HJ03
-url = https://antbedding.com/bo-chan-ga-goi-to-tam-cao-cap-hj03
+match = 20.6%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia H16
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-h16
 
 [shopee.vn]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EPM-22072 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22072.html
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [everonchinhhang.vn]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://happynest.vn/shop/EBGCTBM1820EST23035/bo-ga-chun-chan-bon-mua-sac-
 [everon.com.vn]
 match = 15.4%%
 title = Bộ Chăn Ga Everon ESM21013
-url = https://everon.com.vn/bo-chan-ga-everon-esm21013/
+url = https://everon.com.vn/bo-chan-ga-everon-esm21013/?srsltid=AfmBOoqhEy8x3RwyVj0B_qQAT7nma3BJR_8lyO86xxCa29DSS6A-y0BD
 
 [chandrapsaigon.com]
 match = -11.8%%
@@ -67,9 +67,9 @@ title = Bộ Chăn Ga ES 1840
 url = https://tongdailyeveron.com.vn/products/bo-chan-ga-es1840
 
 [songhong.info]
-match = -5.9%%
-title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
-url = https://songhong.info/chan-ga-goi-khong-chan-bc62
+match = 17.6%%
+title = Dòng chăn ga gối cotton Basic mã BC-04
+url = https://songhong.info/chan-ga-goi-bc-04
 
 [kona.com.vn]
 match = 41.2%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022?srsltid=AfmBOoow0AqQHlfnefzZPOjbVelsZTgM6ugqFscn9rsRUOejBhRTk2J0
 
 [tiki.vn]
 match = 41.2%%
