--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-31 11:12:46
+lastsearch = 2024-07-31 12:11:19
 
 [www.facebook.com]
 match = -141.2%%
@@ -62,9 +62,9 @@ title = Ranliang Hu - Profile | Emory School of Medicine
 url = https://med.emory.edu/departments/radiology/profile/?u=RHU24
 
 [faculty.mdanderson.org]
-match = 0.0%%
-title = Hans Lee, MD
-url = https://faculty.mdanderson.org/profiles/hans_lee.html
+match = -17.6%%
+title = Philip L. Lorenzi, Ph.D.
+url = https://faculty.mdanderson.org/profiles/philip_lorenzi.html
 
 [pfas-1.itrcweb.org]
 match = -17.6%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -176.5%%
+title = Carboxymethyl chitosan-alginate enhances bone repair ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9256840/
 
 [books.google.com]
 match = -7.7%%
@@ -290,4 +290,9 @@ url = https://arxiv.org/pdf/2210.04227
 match = -205.9%%
 title = The Commercial Storage of Fruits, Vegetables, and Florist ...
 url = https://www.ars.usda.gov/ARSuserfiles/oc/np/commercialstorage/commercialstorage.pdf
+
+[ifh.rutgers.edu]
+match = -147.1%%
+title = Rutgers Institute for Health - Rutgers University
+url = https://ifh.rutgers.edu/
 
