--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-07-31 10:20:25
+lastsearch = 2024-07-31 12:18:06
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -24.0%%
+title = chiếu điều hòa kèm gối giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
 
 [meoi.com.vn]
 match = 24.0%%
@@ -22,9 +22,9 @@ title = Set chiếu điều hòa Hermon kèm gối HK2212 - Honper NK
 url = https://khoaibaby.vn/set-chieu-dieu-hoa-hermon-kem-goi-hk2212
 
 [vtvhyundai.vn]
-match = -24.0%%
-title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+match = -8.0%%
+title = Ruiton_Chiếu điều hoà 1m6x2m (kèm 2 vỏ gối cao su)
+url = https://vtvhyundai.vn/shoppingMall/product/editcrruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su--2-goi-cao-su-non-30x50cm.30008392
 
 [voicon.net]
 match = 36.0%%
@@ -42,9 +42,9 @@ title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
 url = https://demxanh.com/chieu-dieu-hoa.html
 
 [tiki.vn]
-match = -20.0%%
-title = Chieu dieu hoa kem vo goi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chieu dieu hoa kem vo goi
+match = 16.0%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [goni.vn]
 match = 8.0%%
@@ -95,4 +95,9 @@ url = https://foreverbedding.net/chieu-dieu-hoa
 match = -60.0%%
 title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyoryo
 url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
+
+[www.congnghieptieudung.vn]
+match = -52.0%%
+title = Sự thật về công dụng của chiếu điều hòa khiến người dùng ...
+url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-khien-nguoi-dung-hieu-lam-dt34423
 
