--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-31 11:29:22
+lastsearch = 2024-07-31 12:18:46
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -112,9 +112,9 @@ title = GREEN TEA - Uses, Side Effects, and More
 url = https://www.webmd.com/vitamins/ai/ingredientmono-960/green-tea
 
 [en.wikipedia.org]
-match = -18.2%%
-title = Ultraviolet
-url = https://en.wikipedia.org/wiki/Ultraviolet
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/The_Blue_Danube
 
 [www.yeastdriven.com]
 match = -114.3%%
