--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-31 06:44:57
+lastsearch = 2024-07-31 12:26:11
 
 [ninhouse.vn]
 match = -161.5%%
 title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi?srsltid=AfmBOooJjJ8hRUPhJDR3Wl0Yci9qkbH1tge72rF26ixXzcEEZ24rzIJD
+url = https://ninhouse.vn/collections/vo-goi
 
 [www.lamido.vn]
 match = 46.2%%
@@ -24,7 +24,7 @@ url = https://www.translate.com/vietnamese-english
 [ru9.vn]
 match = -107.7%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOorJzI_a2glsjeXLCguiTNz7GG4vPauadRaNVm0d-jrm4nTBcPc_
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
 
 [www.reddit.com]
 match = -230.8%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -215.4%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOooEyOfKiTnE3msX2gqytwHeR_pULkqwzX4-niw4e16S3-10crva
+url = https://jysk.vn/vo-goi-trang-tri
 
 [www.everonvn.vn]
 match = 15.4%%
