--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-31 06:12:14
+lastsearch = 2024-07-31 12:54:03
 
 [silverwow.net]
 match = -255.6%%
 title = Heaviest Mens Silver Necklaces Chains
-url = https://silverwow.net/collections/heaviest-chunky-mens-necklace-chains
+url = https://silverwow.net/collections/heaviest-chunky-mens-necklace-chains?srsltid=AfmBOorcxKWgIS1ruYSgH1XkWycSGFgfkYFUH9WnMbRyVzx0nBjYlJCV
 
 [www.whittingtonsteel.com]
 match = 37.5%%
@@ -64,7 +64,7 @@ url = https://www.amazon.co.jp/-/en/Mikawaya-Edomae-Toro-chan-Packs-Frozen/dp/B0
 [unistrutohio.com]
 match = -466.7%%
 title = Unistrut P1001 - 1-5/8" x 3-1/4", 12 Gauge Back-to- ...
-url = https://unistrutohio.com/products/p1001
+url = https://unistrutohio.com/products/p1001?srsltid=AfmBOoodmBJ6gcEMluvagznI3F7zRfEadwgEbKjkWBUN81JkqJ18ijfS
 
 [scholar.google.co.uk]
 match = 0.0%%
@@ -339,7 +339,7 @@ url = https://icecartel.com/blogs/news/gold-chain-weight
 [johnnydangandco.com]
 match = -288.9%%
 title = Silver 10mm Solid Cuban Chain 20" 22" 24"
-url = https://johnnydangandco.com/products/silver-10mm-solid-cuban-chain-20-22-24
+url = https://johnnydangandco.com/products/silver-10mm-solid-cuban-chain-20-22-24?srsltid=AfmBOorV44I9hiBfx0fG0i6vkRcOIuH5HMpVWuW3ylvOfpeOmH9vJ9of
 
 [www.hsph.harvard.edu]
 match = -344.4%%
