--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-30 23:48:13
+lastsearch = 2024-07-31 12:59:34
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -5.9%%
 title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html
+url = https://www.diepxuan.com/chan-kq-song-5kg.html?srsltid=AfmBOop7zGFs_psi98S7p4Rra1f40Xg2BU6PU4FjUs_f2QMp6RpNPC74
 
 [www.kvaser.cn]
 match = -5.9%%
@@ -157,9 +157,9 @@ title = Primary 6 Examination Papers 2015 - Singapore
 url = https://smiletutor.sg/wp-content/uploads/2020/10/P6_Math_2015.pdf
 
 [www.vinmec.com]
-match = -176.5%%
-title = Ý nghĩa xét nghiệm HbA1c trong kiểm soát glucose ở bệnh ...
-url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/y-nghia-xet-nghiem-hba1c-trong-kiem-soat-glucose-o-benh-nhan-dai-thao-duong-va-tam-soat-som-benh-dai-thao-duong/
+match = -100.0%%
+title = Xét nghiệm đờm AFB chẩn đoán bệnh lao phổi
+url = https://www.vinmec.com/vie/bai-viet/xet-nghiem-dom-afb-chan-doan-benh-lao-phoi-vi
 
 [antoanthanhpho.vn]
 match = -58.8%%
