--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-31 10:01:45
+lastsearch = 2024-07-31 12:46:53
 
 [www.zillow.com]
 match = -69.2%%
@@ -132,9 +132,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [twitter.com]
-match = -69.2%%
-title = dargandhi123 - Darwish Gani
-url = https://twitter.com/dargandhi123
+match = 8.3%%
+title = Aisha S Gani
+url = https://twitter.com/aishagani?lang=en
 
 [kidshealth.org]
 match = 0.0%%
