--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-31 01:43:29
+lastsearch = 2024-07-31 12:44:49
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -182.4%%
-title = Department of State Publication: Department and Foreign ...
-url = https://books.google.com/books?id=fqjlLd9U4NMC&pg=PA27&lpg=PA27&dq=man+in+hoa+dep+16&source=bl&ots=8kgWZzhg_y&sig=ACfU3U0HgDsWnGIQ6ju6MBIU71hYY1Gj3Q&hl=en&sa=X&ved=2ahUKEwjroNPUtc-HAxXOL0QIHZRBKLgQ6AF6BAhIEAM
+match = -229.4%%
+title = Lexicon Palaeslovenico-Græco-Latinum emendatum auctum edidit ...
+url = https://books.google.com/books?id=QBJhAAAAcAAJ&pg=PA10&lpg=PA10&dq=man+in+hoa+dep+16&source=bl&ots=rtyV3AdjTn&sig=ACfU3U0ewTR2ynrJuMti-Nd1Tb_O_vyK-Q&hl=en&sa=X&ved=2ahUKEwjVr6i9ydCHAxUqMlkFHcFJA5oQ6AF6BAgfEAM
 
 [tax.vermont.gov]
 match = -29.4%%
