--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-31 12:20:51
+lastsearch = 2024-07-31 12:56:30
 
 [shopee.vn]
-match = -8.3%%
-title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
+match = -25.0%%
+title = Thảm Chùi Chân Lông Xù Loang Đế Chống Trượt ...
+url = https://shopee.vn/Thảm-Chùi-Chân-Lông-Xù-Loang-Đế-Chống-Trượt-Combani-Kích-Thước-40x60-i.191529566.21231533396
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
+title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
 
 [tiki.vn]
-match = -54.2%%
-title = Thảm lau chân, siêu thấm cao cấp room mat 40x60 ( Đồ ...
-url = https://tiki.vn/tham-lau-chan-sieu-tham-cao-cap-room-mat-40x60-do-gia-dung-nhu-y-p181147569.html
+match = -70.8%%
+title = Thảm Lau Chân Nỉ - Chống Trượt, Siêu Thấm Hút Đế Cao ...
+url = https://tiki.vn/tham-lau-chan-ni-chong-truot-sieu-tham-hut-de-cao-su-cao-cap-long-min-day-dan-40x60cm-hang-loai-1-p205153225.html?spid=205153429
 
 [www.thamminhquang.vn]
 match = 33.3%%
@@ -39,7 +39,7 @@ url = https://bichha.vn/tham-welcome-40cmx60cm-nh.html
 [www.lottemart.vn]
 match = -45.8%%
 title = Thảm Len Hình Thú 40x60 cm (Giao Màu Ngẫu Nhiên)
-url = https://www.lottemart.vn/vi-nsg/product/animal-patterned-wool-rug-40x60cm-random-color-delivery-8936186271359-p46359
+url = https://www.lottemart.vn/vi-dng/product/animal-patterned-wool-rug-40x60cm-random-color-delivery-8936186271359-p46359
 
 [www.diepxuan.com]
 match = 100.0%%
