--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-31 12:46:53
+lastsearch = 2024-07-31 13:36:23
 
 [www.zillow.com]
 match = -69.2%%
@@ -307,8 +307,8 @@ title = USA Swimming
 url = https://www.usaswimming.org/
 
 [www.tcsg.edu]
-match = -161.5%%
-title = Technical College System of Georgia: TCSG
+match = 0.0%%
+title = 
 url = https://www.tcsg.edu/
 
 [pubmed.ncbi.nlm.nih.gov]
@@ -640,4 +640,19 @@ url = https://www.yelp.com/brands/stretchlab
 match = -238.5%%
 title = How to Start a Farm: Beginning Farmers and Ranchers
 url = https://www.farmers.gov/your-business/beginning-farmers
+
+[www.usda.gov]
+match = -107.7%%
+title = WEEKLY WEATHER AND CROP BULLETIN
+url = https://www.usda.gov/sites/default/files/documents/wwcb.pdf
+
+[unfccc.int]
+match = -76.9%%
+title = Long-term strategies portal
+url = https://unfccc.int/process/the-paris-agreement/long-term-strategies
+
+[www.gntc.edu]
+match = -138.5%%
+title = Georgia Northwestern Technical College
+url = https://www.gntc.edu/
 
