--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-31 12:27:54
+lastsearch = 2024-07-31 13:32:17
 
 [www.diepxuan.com]
 match = 0.0%%
-title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
+title = Bộ ga chun chần MC20208 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-chan-mc20208-180x200.html
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -74,7 +74,7 @@ url = https://www.instagram.com/p/C2lny5or_NA/
 [diepxuan.com]
 match = -21.1%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/?srsltid=AfmBOopYhfjDRYwe8aKMFp6_FmLpOiK48ht3nL7H5YQvUVVfNgKlTVGV
+url = https://diepxuan.com/
 
 [newenglandsnarrowroad.com]
 match = -350.0%%
