--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-07-31 09:50:41
+lastsearch = 2024-07-31 13:31:15
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -12,9 +12,9 @@ title = ĐỆM LÒ XO EVERON, KING KOIL
 url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [everonkorea.com]
-match = 31.9%%
-title = Đệm lò xo Everon - Nệm King Koil thương hiệu Mỹ tại Việt ...
-url = https://everonkorea.com/dem-lo-xo/
+match = 14.9%%
+title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm - Everon Korea
+url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [demxanh.com]
 match = 27.9%%
@@ -32,9 +32,9 @@ title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
 url = https://everon.online/collections/dem-lo-xo-king-koil
 
 [www.diepxuan.com]
-match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
+match = 36.2%%
+title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
 match = 57.4%%
