--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-31 12:12:21
+lastsearch = 2024-07-31 13:33:38
 
 [www.cms.gov]
 match = 4.5%%
@@ -177,8 +177,8 @@ title = Farm houses for sale in new hampshire [mJROCi]
 url = https://www.nitrc.org/links/?group_id=51&url=https://4835712.detsad147vrn.ru/5487923u6fe43a
 
 [explore.omsystem.com]
-match = -12.5%%
-title = TG-7 - OM System
+match = 13.6%%
+title = TG-7 - OM SYSTEM Cameras
 url = https://explore.omsystem.com/us/en/tg-7
 
 [www.sohoonline.org]
@@ -617,8 +617,8 @@ title =
 url = https://en.wikipedia.org/wiki/Debarment
 
 [appropriations.house.gov]
-match = -13.6%%
-title = asRequestedCPFs_FY25_6.20.24
+match = -109.1%%
+title = asRequestedCPFs_FY25_6.20.24 - House Appropriations
 url = https://appropriations.house.gov/sites/evo-subsites/republicans-appropriations.house.gov/files/evo-media-document/fy25-house-cpfs-as-requested-06.28.2024.xlsx
 
 [www.bpelsg.ca.gov]
