--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-31 13:21:03
+lastsearch = 2024-07-31 13:54:17
 
 [zhangbrickshop.com]
 match = -133.3
@@ -57,9 +57,9 @@ title = Xác định hàm lượng vitamin D2 từ một số loài nấm lớn 
 url = https://vjol.info.vn/index.php/vinhuni/article/download/51293/42137/
 
 [m.facebook.com]
-match = -220.0%%
-title = Vitamin D2 - Sữa Hạt Xanh Organic - Mồng 1 đầu tháng ...
-url = https://m.facebook.com/D2Organic/photos/mồng-1-đầu-tháng-chúc-tất-cả-mọi-người-cầu-mong-ai-cũng-an-lành-sám-hối-tu-sửa-t/475225461683274/
+match = -153.3%%
+title = Na để thông tin kem chống nắng phù hợp với...
+url = https://m.facebook.com/story.php/?story_fbid=1051818282979433&id=100044538125216
 
 [dkv.biz.vn]
 match = -166.7%%
