--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-31 09:28:47
+lastsearch = 2024-07-31 13:45:58
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = -7.1%%
-title = Chiếu Nhựa Văn Phòng Bền Đẹp, Rẻ Như Tặng, Chất ...
-url = https://www.sendo.vn/chieu-nhua-van-phong.htm
+match = -25.0%%
+title = Chiếu nhựa điều hoà gấp gọn in họa tiết ngẫu nhiên kích ...
+url = https://www.sendo.vn/chieu-nhua-dieu-hoa-gap-gon-in-hoa-tiet-ngau-nhien-kich-thuoc-4m-du-2-mam-com-112971933.html
 
 [mia.vn]
 match = -39.3%%
