--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-31 13:38:46
+lastsearch = 2024-07-31 13:45:00
 
 [everonvn.com.vn]
 match = -12.5%%
@@ -27,8 +27,8 @@ title = Topper Everon - Tấm Tăng Tiện Nghi
 url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
-match = -37.5%%
-title = Tấm Trải đa Năng Everon Giá Tốt T06/2024 - Lazada
+match = 0.0%%
+title = Tấm Trải đa Năng Everon Giá Tốt T06/2024
 url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/
 
 [www.everonvn.vn]
