CI images update

--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-31 03:58:58
+lastsearch = 2024-07-31 14:17:51
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -188.2%%
-title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
-url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
+match = -170.6%%
+title = Florida HOA. Are HOAs still able to enter properties ...
+url = https://www.justanswer.com/real-estate-law/ax7ur-florida-hoa-hoas-able-enter-properties.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -24,7 +24,7 @@ url = https://www.nixonpeabody.com/insights/alerts/2024/05/08/do-hoas-have-to-re
 [www.flsenate.gov]
 match = -129.4%%
 title = Chapter 720 Section 303 - 2018 Florida Statutes
-url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
+url = https://www.flsenate.gov/laws/statutes/2018/720.303
 
 [www.doorloop.com]
 match = 0.0%%
@@ -510,4 +510,9 @@ url = https://www.puc.pa.gov/general/consumer_ed/pdf/Act201-Water.pdf
 match = 0.0%%
 title = 
 url = https://www.azoca.gov/resources/faqs/open-meetings-law-faq/
+
+[www.ralaw.com]
+match = -111.8%%
+title = HB1203, HB59 & HB293 to Affect Florida HOAs
+url = https://www.ralaw.com/media/insights/Community Association Law Alert/hb1203_hb59_and_hb293_to_affect_florida_hoas
 
