--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-31 13:17:35
+lastsearch = 2024-07-31 14:12:34
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -77,9 +77,9 @@ title = 15+ mẫu giường ngủ cho bé gái 10 tuổi siêu xinh, dễ thươ
 url = https://noithatcaco.vn/cam-nang-noi-that/giuong-ngu-cho-be-gai-10-tuoi-744.html
 
 [www.quiphuc.com]
-match = 25.0%%
-title = Giường - Ghế du lịch
-url = https://www.quiphuc.com/collections/giuong-ghe-du-lich
+match = 0.0%%
+title = Giường - Sản phẩm mùa hè
+url = https://www.quiphuc.com/collections/giuong-san-pham-mua-he
 
 [sumika.vn]
 match = -65.0%%
