--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-31 13:51:13
+lastsearch = 2024-07-31 14:19:53
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,9 +17,9 @@ title = Identification of 12 new susceptibility loci for different ...
 url = https://pubmed.ncbi.nlm.nih.gov/28346442/
 
 [www.dir.ca.gov]
-match = -21.1%%
-title = ADDITIONAL CASE INFORMATION
-url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
+match = -126.3%%
+title = Workers' Compensation Appeals Board - Panel decisions
+url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
 match = -7.7%%
@@ -42,8 +42,8 @@ title = Tommi Gaines
 url = https://profiles.ucsd.edu/tommi.gaines
 
 [medboard.nv.gov]
-match = -121.1%%
-title = Disciplinary Actions - Board of Medical Examiners
+match = -100.0%%
+title = Disciplinary Actions - Medical Examiners Board
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.techcosmos.com.hk]
