--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-31 12:11:19
+lastsearch = 2024-07-31 14:15:43
 
 [www.facebook.com]
 match = -141.2%%
@@ -22,8 +22,8 @@ title = Chăn Mao Tân 4kg - Điệp Xuân
 url = https://www.diepxuan.com/chan-mao-tan-4kg.html
 
 [m.facebook.com]
-match = -194.1%%
-title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao Shan ...
+match = -176.5%%
+title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao ...
 url = https://m.facebook.com/RoyalDurian/photos/a.3010278729046072/3525143447559595/?type=3
 
 [en.wikipedia.org]
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -176.5%%
-title = Carboxymethyl chitosan-alginate enhances bone repair ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9256840/
+match = -194.1%%
+title = Nine traditional Chinese herbal formulas for the treatment ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5036551/
 
 [books.google.com]
 match = -7.7%%
