--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-31 11:01:11
+lastsearch = 2024-07-31 14:12:12
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -12,14 +12,14 @@ title = Ga Đa Năng Chống Thấm
 url = http://www.dreamland.vn/Ga-Da-Nang-Chong-Tham-i4422.html
 
 [demdreamland.vn]
-match = -45.2%%
-title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
+match = -32.3%%
+title = Lưu trữ 200×220 - Trang 14 trên 21 - demdreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
 match = -22.6%%
 title = Ga chống thấm Hilton Cotton cao cấp CTHT01 | Khuyến mãi
-url = https://demxanh.com/ga-chong-tham-hilton-cotton-cao-cap-ctht01.html
+url = https://demxanh.com/ga-chong-tham-hilton-cotton-cao-cap-ctht01.html?srsltid=AfmBOorKTQERiv9a-X8B55QpkcKRYEaY6tQ9CiHp1Bafz4YIQFGIhSD1
 
 [dreamland.vn]
 match = -21.1%%
