--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-31 12:56:30
+lastsearch = 2024-07-31 14:13:15
 
 [shopee.vn]
-match = -25.0%%
-title = Thảm Chùi Chân Lông Xù Loang Đế Chống Trượt ...
-url = https://shopee.vn/Thảm-Chùi-Chân-Lông-Xù-Loang-Đế-Chống-Trượt-Combani-Kích-Thước-40x60-i.191529566.21231533396
+match = -8.3%%
+title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
+title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
 
 [tiki.vn]
 match = -70.8%%
@@ -83,8 +83,8 @@ url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.h
 
 [sieuthinguyenkim.com]
 match = -62.5%%
-title = Thảm lông mềm trải chân giường, lót ghế ngồi nhiều size 40x60
-url = https://sieuthinguyenkim.com/tham-long-mem-trai-chan-giuong-nti177943446.html
+title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
+url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
 
 [huyenikea.com]
 match = -4.2%%
